[package]
name = "rchef"
version = "0.1.0"
authors = ["bool <booleancoercion@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.25"
if_chain = "1.0.1"
lazy_static = "1.4.0"
phf = { version="0.9.0", features=["macros"] }
rand = "0.8.4"
num-bigint = "0.4"
clap = "3.0.0-beta.2"
