[package]
name = "rchef"
version = "0.2.0-alpha"
authors = ["bool <booleancoercion@gmail.com>"]
edition = "2021"

[dependencies]
thiserror = "1.0.25"
if_chain = "1.0.1"
lazy_static = "1.4.0"
phf = { version = "0.9.0", features = ["macros"] }
rand = "0.8.4"
num-bigint = "0.4"
clap = "3.0.0"
logos = "0.12"
itertools = "0.10"
